--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13319,7 +13319,7 @@ span.select2-selection.select2-selection--single:focus {
   overflow: hidden;
   position: relative;
   margin: 0 auto;
-  height: 950px;
+  height: 1050px;
   /* Medium devices */
 }
 
@@ -17202,6 +17202,12 @@ span.select2-selection.select2-selection--single:focus {
   text-align: justify ;
 }
 
+.p-img{
+  padding: 35px;
+}
 
+.filr-invert{
+  filter: invert(1);
+}
 
 /*# sourceMappingURL=style.css.map */
