--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5912,11 +5912,11 @@ ol.wp-block-rss {
 }
 
 .copyright-wrap .copyright-text a {
-  color: var(--theme-color2);
+  color: var(--black-color);
 }
 
 .copyright-wrap .copyright-text a:hover {
-  color: var(--title-color);
+  color: var(--white-color);
 }
 
 .copyright-wrap.bg-title .copyright-text a:hover {
@@ -5942,7 +5942,7 @@ ol.wp-block-rss {
 }
 
 .copyright-text a {
-  color: var(--theme-color);
+  color: var(--black-color);
 }
 
 .copyright-text a:hover {
@@ -6256,7 +6256,7 @@ ol.wp-block-rss {
 }
 
 .footer-layout2 a:hover {
-  color: var(--theme-color2) !important;
+  color: var(--white-color) !important;
 }
 
 .footer-layout2 a:hover:before {
@@ -12829,6 +12829,7 @@ span.select2-selection.select2-selection--single:focus {
 .checklist li:before {
   content: url('data:image/svg+xml,<svg width="30" height="28" viewBox="0 0 30 28" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.0073 27.0048C5.83378 27.0048 0.00231934 21.1733 0.00231934 13.9997C0.00231934 6.82616 5.83378 0.994629 13.0073 0.994629C16.6185 0.994629 19.9857 2.43424 22.4745 5.06938C22.6004 5.21125 22.5865 5.37014 22.506 5.48565L23.2693 6.48331C23.4148 6.40919 23.6039 6.42449 23.719 6.6065C25.2318 8.77809 26.0126 11.3401 26.0126 13.9996C26.0125 21.1733 20.181 27.0048 13.0073 27.0048ZM13.0073 24.3209C7.32218 24.3209 2.68624 19.6849 2.68624 13.9997C2.68624 8.31456 7.32218 3.67855 13.0073 3.67855C15.7157 3.67855 18.2777 4.72771 20.2053 6.60657C20.3603 6.75951 20.3361 6.94201 20.2353 7.06478L21.2016 8.26404C21.349 8.17781 21.5528 8.18611 21.6692 8.36335C26.0557 15.0386 21.2953 24.3209 13.0073 24.3209Z" fill="%23FF9C00"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13.3489 20.6853C13.2026 20.6853 13.0806 20.5877 13.0318 20.4657C13.0074 20.4169 10.909 15.0001 7.66379 12.9505C7.02939 12.5602 6.54149 12.1453 6.73665 11.2181C6.93181 10.3153 7.54185 9.80294 8.6398 9.55892C10.5917 9.1441 12.6901 12.1697 13.471 13.4141C16.2037 9.43698 21.6692 3.19057 29.6236 2.45858C30.0073 2.4136 30.1492 2.9824 29.7944 3.14178C29.6724 3.19057 18.302 8.38782 13.6905 20.4901C13.6173 20.6121 13.4953 20.6853 13.3489 20.6853Z" fill="%23017D03"/></svg>');
   height: 28px;
+  filter: hue-rotate(45deg);
 }
 
 .checklist li > i {
